# CUNY_DATA_608

./: .Rhistory  .gitignore  .python-version  index.html  pyproject.toml
Final Project/: Meat Consumption Exploration.ipynb
Final Project/Proposal/: proposal.Rmd  proposal.html  proposal.nb.html
Final Project/Proposal/rsconnect/documents/proposal.Rmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
Final Project/assets/: style.css
Final Project/data/: gdp_data.csv  wikipedia_gdp_data.csv
Final Project/final_project/: .env  .python-version  app.py  app_children.py  dropdowns.py  requirements.txt
module1/: hw1.html  hw1.nb.html  hw1.rmd
module3/module_3_q1/: app.R
module3/module_3_q1/rsconnect/shinyapps.io/peterphung2043/: module_3_q1.dcf
module3/module_3_q2/: app.R
module3/module_3_q2/rsconnect/shinyapps.io/peterphung2043/: module_3_q2.dcf
module4/: module_4.ipynb
module4/question-1/: Procfile  data_608_mod4_q1.py  requirements.txt
module4/question-2/: data_608_mod4_q2.py
module5/beginner/: beginner.html  beginner.js
module6/d3_lab/: 01answer.js  02line.js  03scales.js  07offset.js
